【同步】BOOT 和 CLOUD 的功能（mes）